[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BooN"
version = "1.01"
authors = [
  { name = "Franck Delaplace", email = "franck.delaplace@univ-evry.fr" }
]
description = "Boolean network analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Boolean network", "Gene network modelling", "Controllability", "Abduction", "Dynamical system"]

dependencies = [
    "matplotlib",
    "netgraph",
    "networkx",
    "PyQt5",
    "PyQtWebEngine",
    "sympy",
    "tabulate",
    "tqdm",
    "PuLP",
    "python-libsbml",
    "z3-solver"
]

[project.optional-dependencies]
gui = ["PyQt5"]

[project.urls]
Homepage = "https://github.com/Franck-Delaplace/BooN"
Issues = "https://github.com/Franck-Delaplace/BooN/issues/"
Repository = "https://github.com/Franck-Delaplace/BooN"
